test_src/compiler_errors/types/arithmetic/ModFloatError3.b
class ModFloatError3 {
    void test() {
        println(1.0f % 2.0f);
    }
}
